Update index.html khasi

--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
         <div>
             <a href="./cwh/assignment5.html">Assisgnment5</a>
         </div>
+        <div>
+            Hello Khasi Bhai
+        </div>
 
 
     </main>
