--- a/index.html
+++ b/index.html
@@ -2,58 +2,33 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aayan's website</title>
+    <title>Aayan Joshi</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
-    <header>
-        <div>
-            Aayan JOSHI
-            
+    <nav>
+        <div class="px-2 py-2 bg-blue-500 bg-opacity-80 parentdiv-nav">
+            <div>
+                <a href="#">
+                    <img src="../img/download.png" alt="Logo" class="Logo circle">
+                </a>
+            </div>
+            <div class="flex px-2 py-2 fb-nav">
+                <div class="px-2 py-2 rounded-xl mx-2 w-auto text-white"><a href="#">Home</a></div>
+                <div class="px-2 py-2 rounded-xl mx-2 w-auto text-white"><a href="#">About Me</a></div>
+                <div class="px-2 py-2 rounded-xl mx-2 w-auto text-white"><a href="#">Portfolio</a></div>
+                <div class="px-2 py-2 rounded-xl mx-2 w-auto text-white"><a href="#">Contact</a></div>
+            </div>
         </div>
+    </nav>
 
-    </header>
-    <main>
-        <div id="intro" class="flexcontainer">
-            <p1>
-
-                Born on 24-05-2007 A.D. /  2064-02-10 B.S. <br>
-                Graduated from Kaasthamandap Vidhyalaya <br>
-                Studies at Global School of Science <br>
-                Lives in Kathmandu , Nepal
-            </p1>
-        </div>
-
-        <div>
-            <h2>Code With Harry Assignments: </h2>
-        </div>
-        <div>
-            <a href="./cwh/assignment1.html">Assisgnment1</a>
-        </div>
-        <div>
-            <a href="./cwh/assignment2.html">Assisgnment2</a>
-        </div>
-        <div>
-            <a href="./cwh/assignment3.html">Assisgnment3</a>
-        </div>
-        <div>
-            <a href="./cwh/assignment4.html">Assisgnment4</a>
-        </div>
-        <div>
-            <a href="./cwh/assignment5.html">Assisgnment5</a>
-        </div>
-        <div>
-            Hello Khasi Bhai
-        </div>
-
-
-    </main>
-
-    <footer>
-        Hello the last one
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolorum, pariatur?
-    </footer>
+    <div class="name-Parent">
+        <div class="name-sub-parent">
+        <div class="name-div"><h1 class="text-9xl px-2 py-2 mx-2 my-2 name">Aayan Joshi</h1></div>
+        <div><h3 class="text-3xl px-2 py-2 mx-2 my-2">I'm a passionate tech enthusiast</h3></div>
+    </div></div>
 </body>
 </html>
