--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="px-2 py-2 bg-blue-500 bg-opacity-80 parentdiv-nav">
             <div>
                 <a href="#">
-                    <img src="../img/download.png" alt="Logo" class="Logo circle">
+                    <img src="img/download.png" alt="Logo" class="Logo circle">
                 </a>
             </div>
             <div class="flex px-2 py-2 fb-nav">
