--- a/index.html
+++ b/index.html
@@ -30,5 +30,9 @@
         <div class="name-div"><h1 class="text-9xl px-2 py-2 mx-2 my-2 name">Aayan Joshi</h1></div>
         <div><h3 class="text-3xl px-2 py-2 mx-2 my-2">I'm a passionate tech enthusiast</h3></div>
     </div></div>
+
+    <div>
+        <embed src="img/Final candidate list IT Club 2.pdf" width="800px" height="2100px" />
+    </div>
 </body>
 </html>
