--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </div></div>
 
     <div>
-        <embed src="img/Final candidate list IT Club 2.pdf" width="800px" height="2100px" />
+        <img src="img/F_candidate_list_club.png" alt="candidate list"/>
     </div>
 </body>
 </html>
