--- a/index.html
+++ b/index.html
@@ -3,36 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aayan Joshi</title>
+    <title>Aayan joshi - Student | Tech | Web</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
-    <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
+   <header>
     <nav>
-        <div class="px-2 py-2 bg-blue-500 bg-opacity-80 parentdiv-nav">
+        <ul>
+            <li><a href="#" target="_blank" rel="noopener noreferrer">Home</a></li>
+            <li><a href="#" target="_blank" rel="noopener noreferrer">About Me</a></li>
+            <li><a href="#" target="_blank" rel="noopener noreferrer">Projects</a></li>
+            <li><a href="#" target="_blank" rel="noopener noreferrer">Blog</a></li>
+            <li><a href="#" target="_blank" rel="noopener noreferrer">CV</a></li>
+        </ul>
+    </nav>
+   </header>
+   <main>
+    <div class="container">
+        <div class="Caveatner">
+            <div class="dev-info">Hello there, I am </div>
+            <div class="name">Aayan Joshi</div>
+            <div class="about">Student | Programmer | Web Developer</div>
             <div>
-                <a href="#">
-                    <img src="img/download.png" alt="Logo" class="Logo circle">
-                </a>
-            </div>
-            <div class="flex px-2 py-2 fb-nav">
-                <div class="px-2 py-2 rounded-xl mx-2 w-auto text-white"><a href="#">Home</a></div>
-                <div class="px-2 py-2 rounded-xl mx-2 w-auto text-white"><a href="#">About Me</a></div>
-                <div class="px-2 py-2 rounded-xl mx-2 w-auto text-white"><a href="#">Portfolio</a></div>
-                <div class="px-2 py-2 rounded-xl mx-2 w-auto text-white"><a href="#">Contact</a></div>
+                <button class="btn">Contact Me</button>
+                <button class="btn">Download CV</button>
             </div>
         </div>
-    </nav>
-
-    <div class="name-Parent">
-        <div class="name-sub-parent">
-        <div class="name-div"><h1 class="text-9xl px-2 py-2 mx-2 my-2 name">Aayan Joshi</h1></div>
-        <div><h3 class="text-3xl px-2 py-2 mx-2 my-2">I'm a passionate tech enthusiast</h3></div>
-    </div></div>
-
-    <div>
-        <img src="img/F_candidate_list_club.png" alt="candidate list"/>
+        <div class="mepic">
+            <img src="Screenshot 2024-01-30 at 11.48.06 PM.png" alt="heil-hitler">
+        </div>
     </div>
+   </main> 
 </body>
 </html>
