--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </div>
         </div>
         <div class="mepic">
-            <img src="Screenshot 2024-01-30 at 11.48.06 PM.png" alt="heil-hitler">
+            <img src="hel-pic.jpg" alt="Aayan Joshi">
         </div>
     </div>
    </main> 
