--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </div>
         </div>
         <div class="mepic">
-            <img src="hel-pic.jpg" alt="Aayan Joshi">
+            <img src="hel-pic.png" alt="Aayan Joshi">
         </div>
     </div>
    </main> 
