--- a/index.html
+++ b/index.html
@@ -1,38 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Aayan joshi - Student | Tech | Web</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
 </head>
+
 <body>
-   <header>
-    <nav>
-        <ul>
-            <li><a href="#" target="_blank" rel="noopener noreferrer">Home</a></li>
-            <li><a href="#" target="_blank" rel="noopener noreferrer">About Me</a></li>
-            <li><a href="#" target="_blank" rel="noopener noreferrer">Projects</a></li>
-            <li><a href="#" target="_blank" rel="noopener noreferrer">Blog</a></li>
-            <li><a href="#" target="_blank" rel="noopener noreferrer">CV</a></li>
-        </ul>
-    </nav>
-   </header>
-   <main>
-    <div class="container">
-        <div class="Caveatner">
-            <div class="dev-info">Hello there, I am </div>
-            <div class="name">Aayan Joshi</div>
-            <div class="about">Student | Programmer | Web Developer</div>
-            <div>
-                <button class="btn">Contact Me</button>
-                <button class="btn">Download CV</button>
+    <header>
+
+        <!-- //NAVBAR -->
+        <nav>
+
+            <!-- //NAVBAR LINKS -->
+            <ul>
+                <li><a href="index.html" rel="noopener noreferrer">Home</a></li>
+                <li><a href="About-me.html" rel="noopener noreferrer">About Me</a></li>
+                <li><a href="projects.html" rel="noopener noreferrer">Projects</a></li>
+                <li><a href="blog.html" rel="noopener noreferrer">Blog</a></li>
+                <li><a href="projects.html" rel="noopener noreferrer">CV</a></li>
+                <li><a href="contact.html" rel="noopener noreferrer">Contact Me</a></li>
+
+            </ul>
+        </nav>
+    </header>
+
+    <!-- body of website -->
+    <main>
+        <div class="container">
+            <div class="Caveatner">
+                <div class="dev-info">Hello there, I am</div>
+                <div class="name">Aayan Joshi</div>
+                <div class="about">
+                    Student | Programmer | Web Developer
+                </div>
+                <div>
+                    <button class="btn"><a href="contact.html">Contact Me</a></button>
+                    <button class="btn">Download CV</button>
+                </div>
+            </div>
+            <div class="mepic">
+                <img src="Screenshot 2024-01-30 at 11.48.06 PM.png" alt="heil-hitler" />
             </div>
         </div>
-        <div class="mepic">
-            <img src="hel-pic.png" alt="Aayan Joshi">
-        </div>
-    </div>
-   </main> 
+    </main>
 </body>
+
 </html>
