--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 </div>
             </div>
             <div class="mepic">
-                <img src="Screenshot 2024-01-30 at 11.48.06 PM.png" alt="heil-hitler" />
+                <img src="hel-pic.png" alt="heil-hitler" />
             </div>
         </div>
     </main>
