--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
         </div>
         <script>
             function redirectdrive() {
-                alert("fuck you");
+                alert("habibi go make love to shrijal Bhatta");
                 setTimeout((e) => {
                     window.location.href =
                         "https://drive.google.com/drive/folders/1dqb7t4z4QfFCYAtPFHfRWyAoweyaBAiY?usp=sharing";
