--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,7 @@
     <title>Aayan joshi - Student | Tech | Web</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="main.css" />
+    <link rel="stylesheet" href="contact.css' />
 
 </head>
 
