--- a/contact.html
+++ b/contact.html
@@ -13,17 +13,110 @@
 
 <body>
     <header>
-        <nav>
-            <ul>
-                <li><a href="index.html" rel="noopener noreferrer">Home</a></li>
-                <li><a href="About-me.html" rel="noopener noreferrer">About Me</a></li>
-                <li><a href="projects.html" rel="noopener noreferrer">Projects</a></li>
-                <li><a href="blog.html" rel="noopener noreferrer">Blog</a></li>
-                <li><a href="projects.html" rel="noopener noreferrer">CV</a></li>
-                <li><a href="contact.html" rel="noopener noreferrer">Contact Me</a></li>
+        <nav class="nav">
+                    <div class="nav__border"></div>
 
-            </ul>
-        </nav>
+                    <img src="logo.png" class="logo nav__label" />
+
+                    <a href="index.html" class="nav__link">
+                        <div class="nav__icon-container">
+                            <i class="material-icons">home</i>
+                        </div>
+                        <span class="nav__label">Home</span>
+                    </a>
+
+                    <a href="About-me.html" class="nav__link">
+                        <div class="nav__icon-container">
+                            <i class="material-icons">face</i>
+                        </div>
+                        <span class="nav__label">About Me</span>
+                    </a>
+
+                    <a href="projects.html" class="nav__link">
+                        <div class="nav__icon-container">
+                            <i class="material-icons">folder</i>
+                        </div>
+                        <span class="nav__label">Projects</span>
+                    </a>
+
+                    <a href="blog.html" class="nav__link">
+                        <div class="nav__icon-container">
+                            <i class="material-icons">message</i>
+                        </div>
+                        <span class="nav__label">Blog</span>
+                    </a>
+
+                    <a href="CV.html" class="nav__link">
+                        <div class="nav__icon-container">
+                            <i class="material-icons">description</i>
+                        </div>
+                        <span class="nav__label">CV</span>
+                    </a>
+
+                    <a href="contact.html" class="nav__link">
+                        <div class="nav__icon-container">
+                            <i class="material-icons">phone</i>
+                        </div>
+                        <span class="nav__label">Contact</span>
+                    </a>
+
+                    <div class="toggle_btn">
+                        <i class="material-icons">menu</i>
+                    </div>
+                    <!-- //NAVBAR LINKS -->
+                    <ul>
+                        <!-- <li><a href="index.html" rel="noopener noreferrer">Home</a></li>
+                    <li><a href="About-me.html" rel="noopener noreferrer">About Me</a></li>
+                    <li><a href="projects.html" rel="noopener noreferrer">Projects</a></li>
+                    <li><a href="blog.html" rel="noopener noreferrer">Blog</a></li>
+                    <li><a href="projects.html" rel="noopener noreferrer">CV</a></li>
+                    <li><a href="projects.html" rel="noopener noreferrer">Contact Me</a></li> -->
+
+                        <!-- <ul>
+                        <li><a href="index.html" rel="noopener noreferrer"><div class="material-icons">home</div</a></li>
+                        <li><a href="About-me.html" rel="noopener noreferrer"><div class="material-icons">face</div</a></li>
+                        <li><a href="projects.html" rel="noopener noreferrer"><div class="material-icons">folder</div></a></li>
+                        <li><a href="blog.html" rel="noopener noreferrer"><div class="material-icons">message</div></a></li>
+                        <li><a href="projects.html" rel="noopener noreferrer"><div class="material-icons">description</div></a></li>
+                        <li><a href="projects.html" rel="noopener noreferrer"><div class="material-icons">phone</div></a></li>
+                    </ul> -->
+                    </ul>
+
+                    <div class="dropdown_menu">
+                        <li>
+                            <a href="index.html" rel="noopener noreferrer"
+                                >Home</a
+                            >
+                        </li>
+                        <li>
+                            <a href="About-me.html" rel="noopener noreferrer"
+                                >About Me</a
+                            >
+                        </li>
+                        <li>
+                            <a href="projects.html" rel="noopener noreferrer"
+                                >Projects</a
+                            >
+                        </li>
+                        <li>
+                            <a href="blog.html" rel="noopener noreferrer"
+                                >Blog</a
+                            >
+                        </li>
+                        <li>
+                            <a href="projects.html" rel="noopener noreferrer"
+                                >CV</a
+                            >
+                        </li>
+                        <li>
+                            <a href="projects.html" rel="noopener noreferrer"
+                                >Contact Me</a
+                            >
+                        </li>
+                    </div>
+                </nav>
+            </header>
+
     </header>
     <main>
         <div class="form-container">
