--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="main.css" />
     <link rel="stylesheet" href="contact.css" />
+    <link
+            href="https://fonts.googleapis.com/icon?family=Material+Icons"
+            rel="stylesheet"
+        />
 
 </head>
 
